[Teamwork] Completed task 3 to add links to each email of each team member in CSC510 Team 20

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
   <h1>We are Team 20!</h1>
   
-  <h2> Thien Do </h2>
-  <p> Email: tndo@ncsu.edu </p>
+<h2> Thien Do </h2>
+  <p> Email: <a href=mailto:tndo@ncsu.edu>tndo@ncsu.edu </a> </p>
   
   <h2> Nathan Lorenc </h2>
-  <p> Email: ndlorenc@ncsu.edu </p>
+  <p> Email: <a href=mailto:ndlorenc@ncsu.edu> ndlorenc@ncsu.edu </a> </p>
   
   <h2> Jake McDavitt </h2>
-  <p> Email: jfmcdavi@ncsu.edu </p>
+  <p> Email: <a href=mailto:jfmcdavi@ncsu.edu> jfmcdavi@ncsu.edu </a> </p>
   
 </body>
 
