--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
   <h1>We are Team 20!</h1>
-  
-<h2> Thien Do </h2>
+  <h2> Thien Do </h2>
   <p> Email: <a href=mailto:tndo@ncsu.edu>tndo@ncsu.edu </a> </p>
   
   <h2> Nathan Lorenc </h2>
@@ -18,7 +17,8 @@
   
   <h2> Jake McDavitt </h2>
   <p> Email: <a href=mailto:jfmcdavi@ncsu.edu> jfmcdavi@ncsu.edu </a> </p>
-  
+
+  <div class="footer" style="position:absolute;bottom:0;left:0;z-index;">This is a footer.</div>  
 </body>
 
 </html>
