--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   
   <h2> Jake McDavitt </h2>
   <p> Email: <a href=mailto:jfmcdavi@ncsu.edu> jfmcdavi@ncsu.edu </a> </p>
-  
+
+  <div class="footer" style="position:absolute;bottom:0;left:0;z-index:0;">This is a longer footer.</div>  
 </body>
 
 </html>
