Step 9 adding another commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <p>This is another change!</p>
   <h1>We are Team 20!</h1>
   <h2> Thien Do </h2>
   <p> Email: <a href=mailto:tndo@ncsu.edu>tndo@ncsu.edu </a> </p>
